--- a/.github/workflows/test-composed-flow.yml
+++ b/.github/workflows/test-composed-flow.yml
@@ -8,6 +8,8 @@ env:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    outputs:
+      test_account_id: ${{ steps.test-account-create-step.outputs.account_id }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.3
@@ -15,7 +17,33 @@ jobs:
         uses: ./project-validate
         with:
           project_dir: ./.github/workflows/example-project
+      - name: HubSpot Test Account Creation Action
+        id: test-account-create-step
+        uses: ./create-test-account
+        with:
+          account_config_path: ./.github/workflows/test-account-config.json
       - name: HubSpot Project Upload Action
         uses: ./project-upload
         with:
           project_dir: ./.github/workflows/example-project
+          personal_access_key: ${{ steps.test-account-create-step.outputs.personal_access_key }}
+          account_id: ${{ steps.test-account-create-step.outputs.account_id }}
+      - name: HubSpot Install OAuth App Action
+        uses: ./install-oauth-app
+        with:
+          test_account_id: ${{ steps.test-account-create-step.outputs.account_id }}
+          project_dir: ./.github/workflows/example-project
+          personal_access_key: ${{ steps.test-account-create-step.outputs.personal_access_key }}
+          account_id: ${{ steps.test-account-create-step.outputs.account_id }}
+
+  cleanup:
+    needs: deploy
+    if: always() && needs.deploy.outputs.test_account_id != ''
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2.3.3
+      - name: HubSpot Delete Test Account Action
+        uses: ./delete-test-account
+        with:
+          test_account_id: ${{ needs.deploy.outputs.test_account_id }}
