--- a/project-validate/action.yml
+++ b/project-validate/action.yml
@@ -26,7 +26,7 @@ runs:
   using: "composite"
   steps:
     - name: Install HubSpot CLI
-      uses: ./install-hubspot-cli
+      uses: Hubspot/hubspot-project-actions/install-hubspot-cli@0.0.1
       with:
         cli_version: ${{ inputs.cli_version }}
     - name: Validate HubSpot project
