support a default action for marketplace

--- a/.github/workflows/test-composed-flow.yml
+++ b/.github/workflows/test-composed-flow.yml
@@ -17,6 +17,13 @@ jobs:
         with:
           project_dir: ./.github/workflows/test-project
       - name: HubSpot Project Upload Action
+        id: upload-project-step
         uses: ./project-upload
         with:
           project_dir: ./.github/workflows/test-project
+      - name: HubSpot Project Deploy Action
+        if: ${{ steps.upload-project-step.outputs.build_id != '' }}
+        uses: ./project-deploy
+        with:
+          project_dir: ./.github/workflows/test-project
+          deploy_latest_build: true
