--- a/.github/workflows/test-default-action.yml
+++ b/.github/workflows/test-default-action.yml
@@ -13,6 +13,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2.3.3
       - name: HubSpot Default Action
-        uses: ./action.yml
+        uses: ./
         with:
           project_dir: ./.github/workflows/test-project
